# tree-sitter-bicep-params

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bicep-params.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bicep_params/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBicepParams/: bicep-params.h
bindings/swift/TreeSitterBicepParamsTests/: TreeSitterBicepTests.swift
queries/: folds.scm  locals.scm  outline.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: tests.txt
