[package]
name = "tree-sitter-bicep-params"
description = "Bicep Parameter Grammar for Tree-Sitter"
version = "1.1.0"
authors = ["Jerome Brown <Jerome@SoliDeoGloria.tech>", "Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bicep", "bicep-params"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/oWretch/tree-sitter-bicep-params"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.24"
