[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bicep-params"
description = "Bicep Parameter Grammar for Tree-Sitter"
version = "1.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "bicep", "bicep-params"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "Jerome Brown", email = "Jerome@SoliDeoGloria.tech" },
  { name = "Amaan Qureshi", email = "amaanq12@gmail.com" }
]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/oWretch/tree-sitter-bicep-params"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
